--- a/src/main/resources/templates/hotList-details.html
+++ b/src/main/resources/templates/hotList-details.html
@@ -123,7 +123,7 @@
                                 <div class="col-lg-9">
                                     <div class="tab-content-text">
                                         <div th:if="${hotList.getCategories().size()>0}">
-                                            <td th:text="${hotList.getCategoryName()}"></td>
+                                            <td th:text="${hotList.getCategories().get(0).name}"></td>
                                         </div>
                                         <div th:unless="${hotList.getCategories().size()>0}">
                                             <div>-</div>
