filter fixed in hotList.html

--- a/src/main/resources/templates/admin_panel/_hotList.html
+++ b/src/main/resources/templates/admin_panel/_hotList.html
@@ -182,7 +182,7 @@
 
                 <li class="item_sorting_btn">
                     <a th:href="@{/admin-panel#hotList( size=${hotListPage.size}, page=${1} ,sort=${'Hot-List-Type-asc'},filter=${filter})}"
-                       th:text="'Hot List Type(A - Z)'"
+                       th:text="'Hot List Type (A - Z)'"
                        th:style="${sort == 'Hot-List-Type-asc'} ? 'color:#1f5b70'">
                     </a>
                 </li>
@@ -197,7 +197,7 @@
         </ul>
     </div>
     <div class="products_dropdown product_dropdown_filter">
-            <div class="isotope_filter_text"><span>Hot List Filter</span><i class="fa fa-caret-down"
+            <div class="isotope_filter_text"><span>Product Type Filter</span><i class="fa fa-caret-down"
                                                                            aria-hidden="true"></i>
             </div>
             <ul>
