filter fixed in campaign.html

--- a/src/main/resources/templates/admin_panel/_campaign.html
+++ b/src/main/resources/templates/admin_panel/_campaign.html
@@ -163,7 +163,7 @@
 
                 <li class="item_sorting_btn">
                     <a th:href="@{/admin-panel#campaign( size=${campaignPage.size}, page=${1} ,sort=${'Name-asc'},filter=${filter})}"
-                       th:text="'Name(A - Z)'"
+                       th:text="'Name (A - Z)'"
                        th:style="${sort == 'Name-asc'} ? 'color:#1f5b70'">
                     </a>
                 </li>
@@ -177,7 +177,7 @@
         </ul>
     </div>
      <div class="products_dropdown product_dropdown_filter">
-            <div class="isotope_filter_text"><span>Campaign Filter</span><i class="fa fa-caret-down"
+            <div class="isotope_filter_text"><span>Product Type Filter</span><i class="fa fa-caret-down"
                                                                             aria-hidden="true"></i>
             </div>
             <ul>
