--- a/src/main/resources/templates/admin_panel/_hotList.html
+++ b/src/main/resources/templates/admin_panel/_hotList.html
@@ -281,13 +281,13 @@
                                 </div>
                                  <div class="col-lg-3 col-md-3 col-xs-6">
                                     <div class="profile-order-text">
-                                        <td th:text="${hotList.getProductType()}"></td>
+                                        <td th:text="${adminPanelHotListService.createProductType(hotList)}"></td>
                                     </div>
                                 </div>
 
                                 <div class="col-lg-3 col-md-3 col-xs-6">
                                     <div class="profile-order-text">
-                                        <td th:text="${hotList.getHotListType()}"></td>
+                                        <td th:text="${adminPanelHotListService.createHotListType(hotList)}"></td>
                                     </div>
                                 </div>
 
