displaying product type changed in campaign-details.html

--- a/src/main/resources/templates/campaign-details.html
+++ b/src/main/resources/templates/campaign-details.html
@@ -136,7 +136,7 @@
                                 <div class="col-lg-9">
                                     <!-- Category -->
                                     <div class="tab-content-text">
-                                        <h th:text="${campaign.getProductType()}"></h>
+                                        <h th:text="${productType}"></h>
                                     </div>
                                 </div>
                             </div>
