displaying product type and hot list type  changed in hotList-details.html

--- a/src/main/resources/templates/hotList-details.html
+++ b/src/main/resources/templates/hotList-details.html
@@ -108,7 +108,7 @@
                                 <div class="col-lg-9">
                                     <!-- Product Type -->
                                     <div class="tab-content-text">
-                                        <h th:text="${hotList.getProductType()}"></h>
+                                        <h th:text="${productType}"></h>
                                     </div>
                                 </div>
                             </div>
@@ -167,7 +167,7 @@
                                 </div>
                                 <div class="col-lg-9">
                                     <div class="tab-content-text">
-                                        <h th:text="${hotList.getHotListType()}"></h>
+                                        <h th:text="${hotListType}"></h>
                                     </div>
                                 </div>
                             </div>
