order listing performed in profile

--- a/src/main/resources/static/styles/admin-panel.css
+++ b/src/main/resources/static/styles/admin-panel.css
@@ -25,7 +25,8 @@
 }
 
 .category-element {
-    padding-top: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     background: #f8f8f8;
 }
 
