Add bookcases, ebookreaders and ebookreadercases pages to header

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -24,7 +24,7 @@
                         <div class="megamenu">
                             <ul class="single-mega cn-col-4 megamenu-book-category">
                                 <li class="title">Categories</li>
-                                <li><a th:href="@{/category}" class="nav-bar-text-overflow"
+                                <li><a th:href="@{/bookcases}" class="nav-bar-text-overflow"
                                        style="font-weight: bold">
                                     Book Cases
                                 </a></li>
@@ -45,11 +45,11 @@
                         <div class="megamenu">
                             <ul class="single-mega cn-col-4 megamenu-ebook-category">
                                 <li class="title">Categories</li>
-                                <li><a th:href="@{/category}" class="nav-bar-text-overflow"
+                                <li><a th:href="@{/ebookreaders}" class="nav-bar-text-overflow"
                                        style="font-weight: bold">
                                     E-Book Readers
                                 </a></li>
-                                <li><a th:href="@{/category}" class="nav-bar-text-overflow"
+                                <li><a th:href="@{/ebookreadercases}" class="nav-bar-text-overflow"
                                        style="font-weight: bold">
                                     E-Book Reader Cases
                                 </a></li>
