profile review wrong url fix

--- a/src/main/resources/templates/profile/_review.html
+++ b/src/main/resources/templates/profile/_review.html
@@ -13,7 +13,7 @@
         <ul>
 
             <li class="item_sorting_btn">
-                <a th:href="@{/user-details/{id}#review(size=${reviewPage.size},
+                <a th:href="@{/profile#review(size=${reviewPage.size},
                                                         page=${1},
                                                         sort=${'date-desc'},
                                                         ratingFilter=${ratingFilter},
