--- a/src/main/resources/templates/admin_panel/_pending-order.html
+++ b/src/main/resources/templates/admin_panel/_pending-order.html
@@ -393,6 +393,7 @@
                                 <div class="cart_bar" style="padding-top: 20px">
                                     <ul class="cart_bar_list item_list d-flex flex-row align-items-center justify-content-end">
                                         <li class="mr-auto" style="padding-left: 20px">Product</li>
+                                        <li class="cart_item_li">Stock</li>
                                         <li class="cart_item_li">Price</li>
                                         <li class="cart_item_li">Quantity</li>
                                         <li class="cart_item_li">Total</li>
@@ -448,6 +449,11 @@
 
                                                 </div>
                                             </a>
+                                        </div>
+
+                                        <div class="cart_product_price product_text">
+                                            <div class="product_total product_text"
+                                                 th:text="${cartItem.getProduct().getStock()}"></div>
                                         </div>
 
                                         <div class="cart_product_price product_text">
@@ -748,12 +754,22 @@
         if (validation_check([])) {
             event.preventDefault();
             $.post("/admin-panel/pending-order", ret, function (data) {
-                iziToast.show({
-                    title: 'Success',
-                    message: 'Order confirmed successfully.',
-                    position: 'topRight',
-                    color: 'green'
-                });
+                if (data == "true") {
+                    iziToast.show({
+                        title: 'Success',
+                        message: 'Order confirmed and canceled product prices refunded successfully.',
+                        position: 'topRight',
+                        color: 'green'
+                    });
+                } else {
+                    iziToast.show({
+                        title: 'Success',
+                        message: 'Order confirmed successfully.',
+                        position: 'topRight',
+                        color: 'green'
+                    });
+                }
+
                 window.location.href = "/admin-panel#pending-order";
                 setTimeout(function () {
                     history.pushState(null, null, ' ');
