--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -265,7 +265,10 @@
                                     <div class="product_buttons">
                                         <div class="text-right d-flex flex-row align-items-start justify-content-start">
                                             <div title="Add to wish list"
-                                                 class="product_button product_fav text-center d-flex flex-column align-items-center justify-content-center">
+                                                 class="add_wish_list_our_picks_1 product_button product_fav text-center d-flex flex-column align-items-center justify-content-center"
+                                                 name="add_wish_list_our_picks_1"
+                                                 th:id="${product.getProductId()}"
+                                                 th:value="${product.getProductName()}">
                                                 <div>
                                                     <div><img th:src="@{/static/images/heart_2.svg}" class="svg" alt="">
                                                         <div>+</div>
@@ -273,7 +276,10 @@
                                                 </div>
                                             </div>
                                             <div title="Add to shopping cart"
-                                                 class="product_button product_cart text-center d-flex flex-column align-items-center justify-content-center">
+                                                 class="add_cart_our_picks_1 product_button product_cart text-center d-flex flex-column align-items-center justify-content-center"
+                                                 name="add_cart_our_picks_1"
+                                                 th:id="${product.getProductId()}"
+                                                 th:value="${product.getProductName()}">
                                                 <div>
                                                     <div><img th:src="@{/static/images/cart.svg}" class="svg" alt="">
                                                         <div>+</div>
@@ -289,6 +295,7 @@
                     </tr>
                 </div>
                     </div>
+                    <span th:if="${allProductsSize >4}">
 
                 <div class="w3-display-container mySlides">
                 <div class="row products_row">
@@ -373,7 +380,10 @@
                                     <div class="product_buttons">
                                         <div class="text-right d-flex flex-row align-items-start justify-content-start">
                                             <div title="Add to wish list"
-                                                 class="product_button product_fav text-center d-flex flex-column align-items-center justify-content-center">
+                                                 class="add_wish_list_our_picks_2 product_button product_fav text-center d-flex flex-column align-items-center justify-content-center"
+                                                 name="add_wish_list_our_picks_2"
+                                                 th:id="${product.getProductId()}"
+                                                 th:value="${product.getProductName()}">>
                                                 <div>
                                                     <div><img th:src="@{/static/images/heart_2.svg}" class="svg" alt="">
                                                         <div>+</div>
@@ -381,7 +391,10 @@
                                                 </div>
                                             </div>
                                             <div title="Add to shopping cart"
-                                                 class="product_button product_cart text-center d-flex flex-column align-items-center justify-content-center">
+                                                 class="add_cart_our_picks_2 product_button product_cart text-center d-flex flex-column align-items-center justify-content-center"
+                                                 name="add_cart_our_picks_2"
+                                                 th:id="${product.getProductId()}"
+                                                 th:value="${product.getProductName()}">
                                                 <div>
                                                     <div><img th:src="@{/static/images/cart.svg}" class="svg" alt="">
                                                         <div>+</div>
@@ -397,7 +410,8 @@
                     </tr>
                 </div>
                     </div>
-
+</span>
+                    <span th:if="${allProductsSize>8}">
                 <div class="w3-display-container mySlides">
                 <div class="row products_row">
 
@@ -482,7 +496,10 @@
                                     <div class="product_buttons">
                                         <div class="text-right d-flex flex-row align-items-start justify-content-start">
                                             <div title="Add to wish list"
-                                                 class="product_button product_fav text-center d-flex flex-column align-items-center justify-content-center">
+                                                 class="add_wish_list_our_picks_3 product_button product_fav text-center d-flex flex-column align-items-center justify-content-center"
+                                                 name="add_wish_list_our_picks_3"
+                                                 th:id="${product.getProductId()}"
+                                                 th:value="${product.getProductName()}">
                                                 <div>
                                                     <div><img th:src="@{/static/images/heart_2.svg}" class="svg" alt="">
                                                         <div>+</div>
@@ -490,7 +507,10 @@
                                                 </div>
                                             </div>
                                             <div title="Add to shopping cart"
-                                                 class="product_button product_cart text-center d-flex flex-column align-items-center justify-content-center">
+                                                 class="add_cart_our_picks_3 product_button product_cart text-center d-flex flex-column align-items-center justify-content-center"
+                                                 name="add_cart_our_picks_3"
+                                                 th:id="${product.getProductId()}"
+                                                 th:value="${product.getProductName()}">
                                                 <div>
                                                     <div><img th:src="@{/static/images/cart.svg}" class="svg" alt="">
                                                         <div>+</div>
@@ -505,9 +525,13 @@
 
                     </tr>
                 </div>
+
                     </div>
+                         </span>
+                    <span th:if="${allProductsSize >4}">
                     <button class="w3-button w3-display-left w3-black" onclick="plusDivs(-1)">&#10094;</button>
                     <button class="w3-button w3-display-right w3-black" onclick="plusDivs(1)">&#10095;</button>
+                    </span>
 
                 </div>
 
@@ -752,6 +776,7 @@
 
                     </div>
                 </div>
+                <span th:if="${allProductsSize>8}">
                 <div class="row load_more_row" id="load_new">
                     <div class="col">
                         <input type="submit" class="button load_more ml-auto mr-auto"
@@ -759,6 +784,7 @@
                                id="load_more_new_releases">
                     </div>
                 </div>
+                </span>
             </div>
         </div>
 
@@ -996,6 +1022,7 @@
 
                     </div>
                 </div>
+                <span th:if="${allProductsSize>8}">
 
                 <div class="row load_more_row" id="load_best">
                     <div class="col">
@@ -1004,6 +1031,7 @@
                                id="load_more_best_seller">
                     </div>
                 </div>
+                </span>
 
             </div>
 
@@ -1070,19 +1098,14 @@
         document.getElementById("load_best").remove();
     });
 
-    $('.add_wish_list_new , .add_wish_list_new_more ,.add_wish_list_best , .add_wish_list_best_more').click(function (event) {
+    $('.add_wish_list_new , .add_wish_list_new_more ,.add_wish_list_best , .add_wish_list_best_more, .add_wish_list_our_picks_1, .add_wish_list_our_picks_2 , .add_wish_list_our_picks_3').click(function (event) {
         var button = $(this).attr("name");
         var name = $(this).attr("value");
         console.log(button);
         var productID;
-        if (button === "add_wish_list_new")
-            productID = $(this).attr("id");
-        else if (button === "add_wish_list_new_more")
-            productID = $(this).attr("id");
-        else if (button === "add_wish_list_best")
-            productID = $(this).attr("id");
-        else if (button === "add_wish_list_best_more")
-            productID = $(this).attr("id");
+
+        productID = $(this).attr("id");
+
 
         var ret = {
             type: "wish-list",
@@ -1114,19 +1137,14 @@
         })
     });
 
-    $('.add_cart_new , .add_cart_new_more ,.add_cart_best , .add_cart_best_more').click(function (event) {
+    $('.add_cart_new , .add_cart_new_more ,.add_cart_best , .add_cart_best_more , .add_cart_our_picks_1 , .add_cart_our_picks_2 , .add_cart_our_picks_3').click(function (event) {
         var button = $(this).attr("name");
         var name = $(this).attr("value");
         console.log(button);
         var productID;
-        if (button === "add_cart_new")
-            productID = $(this).attr("id");
-        else if (button === "add_cart_new_more")
-            productID = $(this).attr("id");
-        else if (button === "add_cart_best")
-            productID = $(this).attr("id");
-        else if (button === "add_cart_best_more")
-            productID = $(this).attr("id");
+
+        productID = $(this).attr("id");
+
 
         var ret = {
             type: "cart",
